Changed logo display logic for PDF timelist: if logo for the company is not selected then company name is displayed instead. Removed logo testing logic. Fixed Profile menu for admin when part of menu was displayed behind filter panel.

--- a/static/css/menus.css
+++ b/static/css/menus.css
@@ -4,7 +4,7 @@
 #dropdown {
   position: relative;
   display: inline-block;
-  z-index: 2;
+  z-index: 10101;
 }
 
 #dropdown .dropbtn{
@@ -33,13 +33,10 @@
 #dropdown .dropdown-content {
   display: none;
   position: absolute;
-  /*background-color: #f1f1f1;*/
   background-color: #79AEC8;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 2;
   right: 0;
-  /*border-radius: 5px;*/
 }
 
 /* Links inside the dropdown */
